implemented get_wallet endpoint and fixed wallet model referring to the removal of CurrencyActivation
